# cookiecutter-fin-api

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: CMakeLists.txt  Dockerfile  Makefile  README.md  pom.xml  requirements.txt  skaffold.yaml
{{ cookiecutter.project_slug }}/.github/workflows/: build.yml
{{ cookiecutter.project_slug }}/FastAPI/runConfig/: FastAPI.run.xml
{{ cookiecutter.project_slug }}/chart/: Chart.yaml  values.yaml
{{ cookiecutter.project_slug }}/chart/templates/: deployment.yaml  service.yaml
{{ cookiecutter.project_slug }}/config/: drogon_config.json
{{ cookiecutter.project_slug }}/infra/terraform/: main.tf
{{ cookiecutter.project_slug }}/proto/: echo.proto
{{ cookiecutter.project_slug }}/proto/v1/: echo.proto
{{ cookiecutter.project_slug }}/runConfigurations/SpringBoot/: Spring_Boot.run.xml
{{ cookiecutter.project_slug }}/src/: main.py
{{ cookiecutter.project_slug }}/src/app/: main.py
{{ cookiecutter.project_slug }}/src/app/api/v1/routers/: health.py
{{ cookiecutter.project_slug }}/src/app/core/: config.py
{{ cookiecutter.project_slug }}/src/app/schemas/: health.py
{{ cookiecutter.project_slug }}/src/app/services/: health.py
{{ cookiecutter.project_slug }}/src/java/com/example/: Application.java  HealthController.java
{{ cookiecutter.project_slug }}/src/java/com/example/{{ cookiecutter.project_slug | replace('-', '') }}/: HealthController.java
{{ cookiecutter.project_slug }}/src/main/cpp/: main.cpp
{{ cookiecutter.project_slug }}/src/main/cpp/controllers/: HealthController.cc
{{ cookiecutter.project_slug }}/src/main/cpp/server/: EchoServiceImpl.cpp  echo_server.cpp  echo_server.h
{{ cookiecutter.project_slug }}/src/main/csharp/: DemoApiCSharp.csproj  Program.cs
{{ cookiecutter.project_slug }}/src/main/java/com/example/: Application.java  HealthController.java
{{ cookiecutter.project_slug }}/src/main/java/com/example/config/: OpenApiConfig.java
{{ cookiecutter.project_slug }}/src/main/java/com/example/controller/: HealthController
{{ cookiecutter.project_slug }}/src/main/java/com/example/dto/: HealthResponse.java
{{ cookiecutter.project_slug }}/src/main/java/com/example/exception/: GlobalExceptionHandler.java
{{ cookiecutter.project_slug }}/src/main/java/com/example/service/: HealthService.java
{{ cookiecutter.project_slug }}/src/main/resources/: application.yml
{{ cookiecutter.project_slug }}/src/python/: main.py
{{ cookiecutter.project_slug }}/src/python/app/: main.py
{{ cookiecutter.project_slug }}/src/python/app/api/v1/routers/: health.py
{{ cookiecutter.project_slug }}/src/python/app/core/: config.py
{{ cookiecutter.project_slug }}/src/python/app/schemas/: health.py
{{ cookiecutter.project_slug }}/src/python/app/services/: health.py
{{ cookiecutter.project_slug }}/src/test/integration/: test_health_endpoint.py
{{ cookiecutter.project_slug }}/src/test/java/com/example/controller/: HealthControllerTest.java
{{ cookiecutter.project_slug }}/src/test/java/com/example/service/: HealthServiceTest.java
{{ cookiecutter.project_slug }}/src/test/unit/api/v1/routers/: test_health.py
{{ cookiecutter.project_slug }}/src/test/unit/schemas/: test_health_schema.py
{{ cookiecutter.project_slug }}/test/cpp/: EchoServiceTest.cpp  HealthControllerTest.cpp
{{ cookiecutter.project_slug }}/test/csharp/: HealthEndpointTests.cs
{{ cookiecutter.project_slug }}/test/java/com/example/unit/: HealthControllerTest.java
{{ cookiecutter.project_slug }}/test/java/com/example/{{ cookiecutter.project_slug | replace('-', '') }}/: HealthControllerTest.java
{{ cookiecutter.project_slug }}/test/python/: conftest.py  test_main.py
{{ cookiecutter.project_slug }}/test/python/integration/: test_health_endpoint.py
{{ cookiecutter.project_slug }}/test/python/unit/api/v1/routers/: test_health.py
{{ cookiecutter.project_slug }}/test/python/unit/schemas/: test_health_schema.py
{{ cookiecutter.project_slug }}/tests/: test_main.py
